<resources>
    <string name="app_name">QueComemos</string>

    <string name="labelQueComemos">¿Que Comemos?</string>
    <string name="createFood">Crear un nuevo Plato</string>
    <string name="labelTodaySelection">La seleccion para hoy es…</string>
    <string name="labelResults">Los resultados son:</string>

    <string name="textSelectFood">Selecciona los platos de interes</string>

    <string name="itemHome">Inicio</string>
    <string name="itemVote">Votacion</string>
    <string name="itemFoods">Platos</string>
    <string name="itemNewFood">Nuevo Plato</string>

    <string name="labelRegenerate">ReRoll</string>
    <string name="labelGoToVote">Votar</string>
    <string name="labelVote">Siguiente</string>
    <string name="labelSend">Enviar</string>
    <string name="labelGoToHome">Ir al inicio</string>
    <string name="labelFinishVote">Terminar</string>

    <string name="foodDiets">Dietas del Plato</string>
    <string name="foodType">Tipo del Plato</string>
    <string name="foodName">Nombre del Plato</string>
    <string name="isHotFood">Es un plato caliente?</string>

    <string name="labelApplyFilter">Aplicar Filtros</string>
    <string name="labelHot">Caliente</string>
    <string name="labelCold">Frio</string>
    <string name="labelFilters">Filtros</string>
    <string name="labelCancel">Cancelar</string>
    <string name="labelApply">Aplicar</string>

    <!-- ERRORS -->
    <string name="not_found">Elemento no encontrado</string>
    <string name="unknown_error">Error, intente mas tarde</string>
    <string name="labelErase">Deshabilitar</string>
    <string name="foodCulture">Etnia del Plato</string>
    <string name="voidFoods">oops, nada para mostrar</string>
</resources>