<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/filters"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context=".ui.main.foodSelection.filterDialogFragment.FilterDialogFragment">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/labelFilters"
        android:textSize="@dimen/heading_md"
        android:layout_marginTop="@dimen/space_xl"
        android:layout_marginHorizontal="@dimen/space_xl"
        android:textColor="@color/turquoise"/>

    <CheckBox
        android:id="@+id/checkType"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/foodType"
        android:textSize="@dimen/text_md"
        android:layout_marginTop="@dimen/space_xl"
        android:layout_marginHorizontal="@dimen/space_md"/>
    <Spinner
        android:id="@+id/spinnerType"
        android:layout_width="match_parent"
        android:layout_height="@dimen/input_h"
        android:background="@drawable/spinner_background"
        android:paddingHorizontal="@dimen/space_md"
        android:layout_marginTop="@dimen/space_sm"
        android:layout_marginHorizontal="@dimen/space_md"/>

    <CheckBox
        android:id="@+id/checkDiets"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/foodDiets"
        android:textSize="@dimen/text_md"
        android:layout_marginTop="@dimen/space_xl"
        android:layout_marginHorizontal="@dimen/space_md"/>
    <EditText
        android:id="@+id/spinnerDiet"
        android:layout_width="match_parent"
        android:layout_height="@dimen/input_h"
        android:focusable="false"
        android:textSize="@dimen/text_md"
        android:paddingEnd="50dp"
        android:maxLines="1"
        android:inputType="textFilter|textNoSuggestions"
        android:ellipsize="end"
        android:background="@drawable/spinner_background"
        android:paddingHorizontal="@dimen/space_md"
        android:layout_marginTop="@dimen/space_sm"
        android:layout_marginHorizontal="@dimen/space_md"/>

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/space_sm"
        android:paddingHorizontal="@dimen/space_md">
        <RadioButton
            android:id="@+id/hot"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:text="@string/labelHot"/>
        <RadioButton
            android:id="@+id/cold"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:text="@string/labelCold"/>
    </RadioGroup>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="end"
        android:layout_marginTop="@dimen/space_sm"
        android:paddingHorizontal="@dimen/space_md">
        <Button
            android:id="@+id/btnSave"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/button_h_sm"
            style="@style/QueComemos.Button.Text"
            android:textColor="@color/turquoise"
            android:text="@string/labelApply"
            android:textSize="@dimen/text_md"
            android:layout_marginHorizontal="@dimen/space_md"/>

        <Button
            android:id="@+id/btnCancel"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/button_h_sm"
            style="@style/QueComemos.Button.Text"
            android:text="@string/labelCancel"
            android:textSize="@dimen/text_md"/>
    </LinearLayout>
</LinearLayout>