<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.main.elect.ElectFragment">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvSelection"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/textSelectFood"
            android:textSize="@dimen/heading_md"
            android:layout_marginHorizontal="@dimen/space_md"
            android:layout_marginTop="@dimen/space_xxl"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvFood"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:listitem="@layout/item_food"/>

        <LinearLayout
            android:id="@+id/llButtons"
            android:layout_width="match_parent"
            android:layout_height="@dimen/button_h"
            android:layout_margin="@dimen/space_md"
            android:gravity="center"
            app:layout_constraintTop_toBottomOf="@id/nsvList"
            app:layout_constraintBottom_toBottomOf="parent"
            android:weightSum="3">
            <Button
                android:id="@+id/btnContinue"
                android:layout_width="0dp"
                android:layout_weight="1.3"
                android:layout_height="match_parent"
                android:text="@string/labelVote"
                android:layout_marginHorizontal="@dimen/space_sm"
                app:layout_constraintRight_toLeftOf="@id/btnReroll"
                app:layout_constraintLeft_toLeftOf="parent"/>

            <Button
                android:id="@+id/btnFinish"
                android:layout_width="0dp"
                android:layout_weight="1.3"
                android:layout_height="match_parent"
                android:backgroundTint="@color/turquoise"
                android:text="@string/labelFinishVote"
                android:layout_marginHorizontal="@dimen/space_sm"
                app:layout_constraintLeft_toRightOf="@id/btnVote"
                app:layout_constraintRight_toRightOf="parent"/>
        </LinearLayout>
    </LinearLayout>
</ScrollView>